# edl-starter

./: render.yaml
.github/workflows/: backend.yml  frontend.yml
backend/: pyproject.toml
backend/src/: app.py  database.py  models.py
backend/tests/: conftest.py  test_api.py
frontend/: vite.config.js
